# online-bilateral-trade

./: .gitignore  LICENSE  README.md  data_analysis.ipynb  pyproject.toml  requirements.txt
environments/: base.py  contextual.py
learners/: bandits.py  experts.py
linear_bandits/: data_analysis.ipynb  ellipsoid_algorithms.py
notebooks/: implementation.ipynb  implementation_v1.ipynb  paper_implementation.ipynb  thesis_implementation.ipynb
utils/: data_structures.py  regret.py  valuations.py
