[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OnlineBT"
version = "0.1.0"
description = "A library for testing algorithms in Online Bilateral Trade settings."
authors = [
    { name = "Emanuele Coccia", email = "emanuele.coccia@studbocconi.it" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "matplotlib>=3.9.3",
    "tqdm>=4.67.1",
    "joblib>=1.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
